style: prevent jump /details

--- a/src/components/ListItem/listItem.module.css
+++ b/src/components/ListItem/listItem.module.css
@@ -1,16 +1,28 @@
 .container {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-end;
+  justify-content: center;
   position: relative;
+  width: 120rem;
 }
 
+.container > ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 100%;
+}
 .container > div ~ ul {
   flex-basis: 30%;
 }
 
+.container > div {
+  flex-basis: 70%;
+}
+
 .item {
-  max-width: 150rem;
+  max-width: 50rem;
   font-size: 1.5rem;
   display: flex;
   flex-direction: row;
